@startuml

hide circle
hide methods
title: Relevant Domain Model Excerpt - US06


class Player {
    username: Text
    password: Text
}

class Map {
   name: Text
}

class Size {
   width: Integer
   height: Integer
}

class Station {
  name: Text
  constructionCosts: Decimal
  stationType: Type
}

class Position {
   Xposition: Integer
   Yposition: Integer
}

class Building {
  name: Text
  cost: Decimal
  requiredLevel: Integer
  buildingType: Type
}


'Player Connections
Player "1" -- "*" Map : has >

'Map
Map "*" -- "1" Size : has >
Map "*" -- "*" Station : has >
Map "*" -- "1..*" Position : has >

'Station Connections
Station "1" -- "1..*" Building : can be upgraded with >
Station "0,1" -- "1" Position : has >
Station "*" -- "1" Size : has >

@enduml
